# src/main/resources/contract/api.yaml
@@ -108,6 +108,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+
+
   /Users:
     get:
       summary: Obtener todos los usuarios
@@ -328,10 +330,6 @@ paths:
 
 
 
-
-
-
-
   /Category:
     get:
       summary: Obtener todas las categorías
@@ -365,6 +363,164 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+    post:
+      summary: Crear una nueva categoría
+      description: "Permite crear una nueva categoría en la base de datos."
+      operationId: createCategory
+      tags:
+        - Categories
+      requestBody:
+        description: Datos de la nueva categoría
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Category"
+      responses:
+        "201":
+          description: Categoría creada exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        "400":
+          description: Solicitud incorrecta (Bad Request)
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /Category/{idCategory}:
+    get:
+      summary: Obtener una categoría por ID
+      description: "Permite obtener los datos de una categoría mediante su ID único."
+      operationId: getCategoryById
+      tags:
+        - Categories
+      parameters:
+        - name: idCategory
+          in: path
+          required: true
+          description: ID único de la categoría
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Categoría encontrada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        "400":
+          description: Solicitud incorrecta (Bad Request)
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "404":
+          description: Categoría no encontrada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+    put:
+      summary: Actualizar datos de una categoría
+      description: "Permite a los usuarios autenticados con privilegios actualizar la información de una categoría. No se permite cambiar el ID de la categoría."
+      operationId: updateCategory
+      tags:
+        - Categories
+      parameters:
+        - name: idCategory
+          in: path
+          required: true
+          description: ID único de la categoría que se desea actualizar
+          schema:
+            type: integer
+      requestBody:
+        description: Nuevos datos de la categoría
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Category"
+      responses:
+        "204":
+          description: Categoría actualizada satisfactoriamente (sin contenido).
+        "400":
+          description: Error en la solicitud o datos incorrectos.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "404":
+          description: Categoría no encontrada.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Error interno del servidor.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+    delete:
+      summary: Eliminar una categoría
+      description: "Permite eliminar una categoría mediante su ID."
+      operationId: deleteCategory
+      tags:
+        - Categories
+      parameters:
+        - name: idCategory
+          in: path
+          required: true
+          description: ID único de la categoría que se desea eliminar
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Categoría eliminada exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DeleteResponse"
+        "400":
+          description: Solicitud incorrecta (Bad Request)
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "404":
+          description: Categoría no encontrada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
+
+
+
+
+
+
+
   /Subcategory:
     get:
       summary: Obtener todas las subcategorías
